# eleclib

./: README.md  README.rst  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
eleclib/: household.py  property.py  pyproject.toml
eleclib/.ipynb_checkpoints/: README-checkpoint.md  household-checkpoint.py  utility-checkpoint.py
eleclib/appliances/: README.md  __init__.py  appliance.py  house_appliance.py  usage_appliance.py
eleclib/appliances/.ipynb_checkpoints/: house_appliance-checkpoint.py  usage_appliance-checkpoint.py
eleclib/appliances_old/: __init__.py  heater.py
eleclib/appliances_old/.ipynb_checkpoints/: appliance-checkpoint.py  fridge-checkpoint.py  lights-checkpoint.py  oven-checkpoint.py  pump-checkpoint.py  water_heater-checkpoint.py
eleclib/eleclib/: household.py
eleclib/eleclib/.ipynb_checkpoints/: household-checkpoint.py
eleclib/tests/: test_eleclib.py
tests/: test_eleclib.py  test_household.py
tests/.ipynb_checkpoints/: test-checkpoint.py  test_household-checkpoint.py
