[tool.poetry]
name = "eleclib"
version = "0.1.0"
description = ""
authors = ["marcel-sk <marcelskura1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
import-ipynb = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
